--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 </head>
 <body>
 <h1>Hello, world!</h1>
+<br/>
+<span class="glyphicon glyphicon-search" style="font-size: 60px">搜索</span>
+<br/><br/>
 <div class="container" style="border:1px solid green">
     <div class="row">
         <div class="col-md-4 col-xs-4" style="border:1px solid red">左1</div>
@@ -47,7 +50,7 @@
 <!--CSS样式的优先原则是就近-->
 <div class="my_div">Hello,媒体查询,屏幕宽度小于480时，变Yellow</div>
 <br/>
-<div class="my_div_2" style="border:1px solid black">Hello,媒体查询,屏幕宽度小于480时，变Yellow</div>
+<div class="my_div_2" style="border:1px solid black">  ! important </div>
 <br/>
 <div class="container">
     <table class="table table-hover table-striped table-bordered">
@@ -70,8 +73,6 @@
         </tbody>
     </table>
 </div>
-<br/>
-<span class="glyphicon glyphicon-search" style="font-size: 60px">搜索</span>
 <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/plugins/jquery-3.1.1.min.js"></script>
 </body>
